# demo

./: Makefile  pyproject.toml  test_concurrent_load.py  test_growth_mitigation.py  test_hindsight_adversarial.py  test_hindsight_features.py
apps/crash_recovery/: README.md  __main__.py  memory.py  output.txt  pipeline.py  recovery.py
apps/crash_recovery/agents/: __init__.py  competitive_intel.py  financial_modeler.py  risk_analyst.py  tech_assessor.py
apps/discovery/: README.md  __main__.py  config.py  memory.py  output.txt  pipeline.py
apps/discovery/agents/: __init__.py  coordinator.py  evaluator.py  recommender.py  researcher.py
apps/orchestrator/: README.md  __main__.py  agent.py  config.py  memory.py  output.txt  tools.py
apps/resilience/: __main__.py  config.py  memory.py  output.txt  pipeline.py  recovery.py  state.py
apps/resilience/agents/: base.py  market_analyst.py  report_writer.py
integrations/adk/: README.md  main.py  requirements.txt  software_discovery.py
integrations/agno/: README.md  main.py  requirements.txt
integrations/crewai/: README.md  main.py  requirements.txt
integrations/langchain/: README.md  main.py  requirements.txt
integrations/langgraph/: README.md  main.py  requirements.txt
live/: .env.example  .gitignore  HOW_LEARN_WORKS.md  README.md  demo.ipynb  demo_learn.ipynb  demo_learn_output.txt  docker-compose.demo.yml  requirements.txt
live/scripts/: 00_preseed.py  _common.py  demo_learn.py  run_all.py
