[project]
name = "mubit-demo"
version = "0.1.0"
description = "Mubit live demos"
requires-python = ">=3.11"
dependencies = [
    "mubit-sdk>=0.5.0",
    "google-genai>=1.0",
    "python-dotenv>=0.19.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[project.optional-dependencies]
langgraph = ["mubit-langgraph>=0.1", "langchain-google-genai>=2.0"]
crewai = ["mubit-crewai>=0.1"]
langchain = ["mubit-langchain>=0.1", "langchain-google-genai>=2.0"]
adk = ["mubit-adk>=0.1", "google-adk>=0.3"]
all = [
    "mubit-langgraph>=0.1",
    "mubit-crewai>=0.1",
    "mubit-langchain>=0.1",
    "mubit-adk>=0.1",
    "langchain-google-genai>=2.0",
    "google-adk>=0.3",
]
